added jacoco plugin