@@ -1,26 +1,52 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>it.unipd.tos</groupId>
-  <artifactId>restaurant-manager</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0</version>
-  <name>restaurant-manager</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <properties>
-  	<maven.compiler.source>6</maven.compiler.source>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>it.unipd.tos</groupId>
+	<artifactId>restaurant-manager</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0</version>
+	<name>restaurant-manager</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+	  <dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
+	  </dependency>
+	</dependencies>
+	<properties>
+		<maven.compiler.source>6</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  <build>
+	</properties>
+	<reporting>
+		<plugins>
+	      	<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<!-- select non-aggregate reports -->
+							<report>report</report>
+							</reports>
+					</reportSet>
+				</reportSets>
+	      	</plugin>
+		</plugins>
+  	</reporting> 	
+	<build>
   	<plugins>
+		
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-surefire-plugin</artifactId>
+		  <configuration>
+			<forkCount>3</forkCount>
+			<reuseForks>true</reuseForks>
+			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+		  </configuration>
+		</plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-checkstyle-plugin</artifactId>
@@ -43,32 +69,22 @@
         		<groupId>org.eluder.coveralls</groupId>
         		<artifactId>coveralls-maven-plugin</artifactId>
        		 	<version>4.3.0</version>
-      		</plugin>
-	</plugins>
+      	</plugin>
+		
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.7.6.201602180812</version>
+			<executions>
+				<execution>
+				    <id>prepare-agent</id>
+				    <goals>
+				        <goal>prepare-agent</goal>
+				    </goals>
+				</execution>
+			</executions>
+		</plugin>	
+		
+</plugins>
 </build>
 </project>
-
-<!--
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
-        <configuration>
-        	<failsOnError>true</failsOnError>
-         	<configLocation>checkstyle.xml</configLocation>
-          <consoleOutput>true</consoleOutput>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>checkstyle</goal>
-              </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
--->
